# spark-coupling

./: LICENSE  README.md
benchmark/: Makefile  Makefile.inc  README.md  run
benchmark/base/: Makefile  base.c  base.h
benchmark/fs/: Makefile  main.c
benchmark/par/: main.c
transport-libs/: README.md
transport-libs/jvm/: .gitignore  README.md  build.sbt
transport-libs/jvm/src/main/resources/: application.conf
transport-libs/jvm/src/main/scala/: courier.scala  semaphore.scala  tschema.scala
transport-libs/native/: Cargo.toml  Makefile  courier.h
transport-libs/native/src/: courier.rs  lib.rs  ring.rs
util/codegen/: .gitignore  Cargo.toml  README.md  run
util/codegen/src/: main.rs
util/codegen/templates/: reader.scala  record.scala  schema.scala  tablematch.scala
util/slurm/: README.md  run  setup  spark-job  test  worker
vegasoid/: README.md  oob
vegasoid/dml/: analysis.dml  init.dml  printer.dml
vegasoid/jvm/: .gitignore  README.md  build.sbt
vegasoid/jvm-redux/: build.sbt
vegasoid/jvm-redux/src/main/resources/: pruner.conf
vegasoid/jvm-redux/src/main/scala/: main.scala  schema.scala
vegasoid/jvm/src/main/resources/: pruner.conf
vegasoid/jvm/src/main/scala/: main.scala
vegasoid/native/: .gitignore  analysis.dml  init.dml
vegasoid/native/sim/: .gitignore  plot.R
vegasoid/native/sim/main/: .gitignore  Makefile  run
vegasoid/native/sim/main/src/: data.h  lib.f90  main.c
vegasoid/post/: ex23.csv  ex23.csv.mtd  fullrun.csv  fullrun.csv.mtd  iter23.csv  iter23.csv.mtd  script.R
vegasoid/rundir/: run
