[package]
name = "rs-structparse"
version = "0.1.0"
authors = ["Alexander Lemon <amikharemon@gmail.com>"]
license = "BSD-3-Clause"

[build_dependencies]
askama = "0.7.1"

[dependencies]
askama = "0.7.1"
clap = "2.32.0"
colored = "1.6.1"

[dependencies.clang]
version = "0.20.0"
features = ["clang_3_8"]
